# ibkr_bot

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  __init__.py  env  pyproject.toml  pyrightconfig.json
backtester/: DESIGN.md  README.md  __main__.py  broker.py  data_loader.py  diff.sql  engine.py  klines_syncer.py  mock_client.py  move_filled_orders_to_history.sh  run_backtest.sh  strategy.py  sync_klines.sh
binance_api/: README.md  __main__.py  cancel_order.py  common.py  get_account.py  get_all_orders.py  get_balance.py  get_exchange_info.py  get_klines.py  get_open_orders.py  get_symbol_ticker.py  simple_earn.py  simple_earn_redeem.py
database/: __init__.py  auth_models.py  config.py  config_optimized.py  connection.py  crud.py  db_config.py  enums.py  init_db.py  log_models.py  models.py  order_models.py  schema.py  stats_models.py  symbol_crud.py  trading_log_crud.py  trading_models.py
ibkr_api/: README.md  __init__.py  __main__.py  cancel_order.py  common.py  get_account.py  get_all_orders.py  get_balance.py  get_exchange_info.py  get_executions.py  get_klines.py  get_open_orders.py  get_positions.py  get_symbol_ticker.py  place_order.py  simple_earn.py  simple_earn_redeem.py
indicators/: __init__.py
order_builder/: __init__.py  __main__.py  app.py  balance_manager.py  models.py  opposite_order_handler.py  precision_handler.py  price_calculator.py  reference_price_manager.py  trading_logger.py  unmatched_dust_handler.py  unmatched_orders.py
order_checker/: __init__.py  __main__.py  common.py  daily_signal.py  existing_buy_order.py  existing_sell_order.py  oper_mode.py  signal_validation.py
order_filler/: README.md  __init__.py  __main__.py  csv_importer.py  profit_lock.py
scheduler/: __init__.py  __main__.py  config_loader.py  main_scheduler.py  timeframe_matcher.py
scripts/: api_start.sh  backend_sync.sh  check_commit_message_punctuation.py  check_function_calls.py  check_specific_functions.py  db_sync.sh  fix_chinese_punctuation.py  frontend_sync.sh  lib_remote_env.sh  lib_sync.sh  migrate_database.py  monitor_unmatched_value.py  scheduler_start.sh  sync.sh  web.sh
shared/: __init__.py  async_notifier.py  clock.py  config.py  constants.py  demark_utils.py  logger_utils.py  number_format.py  output_utils.py  path_utils.py  time_utils.py  timeframe_utils.py  timeframes.py  timing.py  typing.py
tests/: test_auth_api.py  test_db_connection.py  (+9 more)
(+250 files in other folders)
