[project]
name = "mexc-bot"
version = "2.0.0"
description = "MEXC Exchange DeMark 14 Trading Bot - Automated Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "pygments>=2.16.0",
    "jsii>=1.112.0",
    "publication>=0.0.3",
    "rich>=14.1.0",
    "pyjwt>=2.10.1",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "python-binance>=1.0.19",
    "websockets>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "database",
    "ibkr_api",
    "demark",
    "order_builder",
    "order_checker",
    "order_filler",
    "scheduler",
    "shared",
    "web_admin",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = [
  "database",
  "demark",
  "ibkr_api",
  "order_builder",
  "order_checker",
  "order_filler",
  "scheduler",
  "shared",
  "web_admin/api"
]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# black 配置已移除,统一使用 ruff 进行格式化与检查

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (needed for relative imports)
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends is fine)
]

exclude = [
    "mexc_api/mexc-sdk-1.0.0/",  # 排除第三方SDK
    "archived/**",  # 排除已废弃代码
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert statements are expected in tests
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
]

# mypy 配置已移除,统一使用 pyright
